# agentscope

./: README.md  agentscope.py  index.html  pyproject.toml  wrangler.toml
.wrangler/cache/: pages.json  wrangler-account.json
agentscope/: __init__.py  cli.py  config.py  platform.py  risk_engine.py  session_log.py
functions/api/: waitlist.js
