[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentscope"
version = "0.1.0"
description = "AI Agent Permissions, Without the Pain. Task-based authorization for AI coding agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ObserveCo", email = "hello@observeco.ai"}
]
keywords = ["ai", "agents", "permissions", "security", "devtools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "colorama>=0.4.6",
    "platformdirs>=4.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
agentscope = "agentscope.cli:main"

[project.urls]
Homepage = "https://observeco.ai"
Documentation = "https://observeco.ai/docs"
Repository = "https://github.com/observeco/agentscope"
Issues = "https://github.com/observeco/agentscope/issues"

[tool.setuptools.packages.find]
include = ["agentscope*"]

[tool.ruff]
line-length = 100
target-version = "py39"
